fixing rows sticking out

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 /*Header mobile*/
 #dropdown-container {
   padding-left: 50px;
@@ -32,10 +34,11 @@
 
 /*Header default*/
 
-#brgr-icon {
-  width: 150px;
+/*#brgr-icon {
+  display: block;
+  width: 100%;
   height: 200px;
-}
+}*/
 
 #company-name {
   display: block;
@@ -49,10 +52,11 @@
 
 #bgr-img {
   background-image: url("assets/office.jpeg");
-  background-repeat: no-repeat;
+  /*background-repeat: no-repeat;*/
   background-size: cover;
-  background-color: purple;
+  /*background-color: purple;*/
   display: block;
+  margin: 0 auto;
 }
 
 
@@ -67,22 +71,28 @@
   background-color: rgba(119, 47, 147, 0.4);
 }
 
+#hello-col {
+  padding-top: 70px;
+  display: block;
+  margin: 0 auto;
+}
+
 #hello-text {
   display: block;
   color: white;
   font-family: 'Roboto', sans-serif;
   text-align: center;
-  top: 70px;
+  width: 50%;
+  margin: 0 auto;
 }
 
-#hello-detail {
-  /*add different font for intro text*/
-}
 
 #learn-btn {
   border: 0 none;
   background-color: #68228B;
   color: white;
+  display: block;
+  margin: 0 auto;
 }
 
 /*Redefining the web section*/
@@ -200,11 +210,12 @@
 #teamsters-row {
   display: block;
   min-height: 45vh;
+  padding-bottom: 80px;
 }
 
 #teamsters-col {
   display: block;
-  padding-bottom: 80px;
+  /*padding-bottom: 80px;*/
 }
 
 #team-social {
@@ -229,8 +240,11 @@
 
 #company-col {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row;
+  width: 100%;
+  margin: 0 auto;
   justify-content: space-around;
+  background-color: purple;
 }
 
 #company-imgs {
@@ -266,6 +280,8 @@
 #contact-company-text {
   color: grey;
 }
+
+/*About Section*/
 
 #about-cols {
   background-color: #0D0D0D;
